--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
-    <title>Template</title>
+    <title>Challenge 310</title>
   </head>
   <body>
     <div id="root"></div>
